날씨 화면 및 바텀바 작업 진행
날씨 화면 및 바텀바 뷰

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">My Application</string>
+    <string name="menu_home">홈</string>
+    <string name="menu_course">여행코스</string>
+    <string name="menu_weather">날씨</string>
+    <string name="menu_my">마이</string>
 </resources>
